Fixed calculation result overflowing issue

--- a/styles.css
+++ b/styles.css
@@ -46,6 +46,7 @@ body {
 	font-size: 1.3rem;
 	height: 60%;
 	margin-top: 1px;
+	overflow-x: hidden;
 }
 
 .buttons {
